--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 		</main>
 
 		<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-		<script src="dist/js/yelp.js"></script>
+		<script src="dist/js/twitter.js"></script>
 		<script src="dist/js/main.js"></script>
 	</body>
 </html>
