--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 						<li class="count-menu__item count-menu__item_100">100 results</li>
 					</ul>
 				</div>
+				<p class="popularity-message hidden">Seach by popularity limited to 15 results</p>
 			</section>
 			<section class="results">
 				<!-- <div class="results__row">
